finished 'currently playing' layout, added the rest of the screens, finished library functionality, playlist song list functionality (except playing songs), the currentyl playing screen isn't fully working (the slider is buggy)

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -5,16 +5,22 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:OdtwarzaczMuzyki"
     Title="OdtwarzaczMuzyki"
-    FlyoutBehavior="Disabled">
+    FlyoutBehavior="Disabled"
+    Background="#274690">
 
-    <ShellContent
-    Title=""
-    ContentTemplate="{DataTemplate local:CurrentlyPlaying}"
-    Route="CurrentlyPlaying" />
     <ShellContent
         Title=""
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
+    <ShellContent
+        Title=""
+        ContentTemplate="{DataTemplate local:PlaylistPage}"
+        Route="PlaylistPage" />
+    <ShellContent
+        Title=""
+        ContentTemplate="{DataTemplate local:CurrentlyPlaying}"
+        Route="CurrentlyPlaying" />
+    
     
 
 </Shell>
